--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantA_FuelTank_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantA_FuelTank_09375.cfg
@@ -32,7 +32,7 @@ PART
 	title = DiamantA Fuel Tank
 	manufacturer = Knes
 	description = 
-	tags = Diamant Knes
+	tags = Diamant Knes Fuel Tank 0.9375
 
 	mass = 0.3125
 
