--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_Avionics_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_Avionics_0625.cfg
@@ -33,9 +33,9 @@ PART
 	title        = DiamantB avionics
 	manufacturer = Knes
 	description  = A small probe for a small rocket.
-	tags = Diamant Knes
+	tags = Diamant Knes probe reaction wheels avionic control 0.625
 
-	mass = 0.06
+	mass = 0.035
 
 	dragModelType  = default
 	maximum_drag   = 0.5
@@ -129,8 +129,8 @@ PART
 	RESOURCE
 	{
 		name = MonoPropellant
-		amount = 50
-		maxAmount = 50
+		amount = 20
+		maxAmount = 20
 	}
 	
 	EFFECTS
