--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
@@ -29,9 +29,9 @@ PART
 	title = Diamant Fin
 	manufacturer = Knes
 	description = Small Fin for the Diamant Rocket
-	tags = Diamant Knes
+	tags = Diamant Knes fin
 	
-	mass = 0.055
+	mass = 0.02
 	
 	thermalMassModifier = 8.0
 	// heatConductivity = 0.06 // half default
