--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron_B.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron_B.cfg
@@ -29,9 +29,9 @@ PART
 	title = Diamant Fin Engine
 	manufacturer = Knes
 	description = Small Fin with small engine for the Diamant Rocket
-	tags = Diamant Knes
+	tags = Diamant Knes fin engine
 	
-	mass = 0.055
+	mass = 0.025
 	
 	thermalMassModifier = 8.0
 	// heatConductivity = 0.06 // half default
@@ -91,7 +91,7 @@ PART
 			key = 7 0.001
 		}
 	}
-		EFFECTS
+	EFFECTS
 	{
 		running
 		{
@@ -105,16 +105,14 @@ PART
 				pitch = 1.0 1.0
 				loop = true
 			}
-			MODEL_MULTI_PARTICLE
+			PREFAB_PARTICLE
 			{
-			  modelName = Squad/FX/shockExhaust_blue_small
-			  transformName = thrustTransform
-			  emission = 0.0 0.0
-			  emission = 0.05 0.0
-			  emission = 0.075 0.25
-			  emission = 1.0 1.25
-			  speed = 0.0 0.5
-			  speed = 1.0 1.2
+				prefabName = fx_exhaustFlame_yellow_tiny_Z
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 1.0 0.5
+				speed = 0.0 0.8
+				speed = 1.0 1.0
 			}
 		}
 		engage
