--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Booster_P064_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Booster_P064_0625.cfg
@@ -40,9 +40,9 @@ PART
 	title = Diamant P064 Booster
 	manufacturer = Knes
 	description = 
-	tags = Diamant Knes 0.625
+	tags = Diamant Knes 0.625 booster p064
 
-    mass = 0.25
+    mass = 0.15
 
 	dragModelType = default
 	maximum_drag = 0.20
