--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_0625.cfg
@@ -37,9 +37,9 @@ PART
 	manufacturer = Knes
 	description = A 0.625 Decoupler for Diamant Rocket
 		
-	tags = Knes Decoupler Diamant
+	tags = Knes Decoupler Diamant 0.625
 
-	mass = 0.07
+	mass = 0.015
 
 	dragModelType  = default
 	maximum_drag   = 0.10
