--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_09375.cfg
@@ -37,9 +37,9 @@ PART
 	manufacturer = Knes
 	description = A 0.9375 Decoupler for Diamant Rocket
 		
-	tags = Knes Decoupler Diamant
+	tags = Knes Decoupler Diamant 0.9375
 
-	mass = 0.07
+	mass = 0.05
 
 	dragModelType  = default
 	maximum_drag   = 0.10
