--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_0625.cfg
@@ -33,7 +33,7 @@ PART
 	manufacturer = Knes
 	description = 0.625 Fairing
 
-	tags = Knes Diamant Fairing
+	tags = Knes Diamant Fairing 0.625
 
 	mass = 0.025
 
@@ -55,9 +55,8 @@ PART
 		nSides = 24
 		nArcs = 2
 		nCollidersPerXSection = 8
-		TextureURL = Squad/Parts/Aero/fairings/fairings_diff
-		CapTextureURL = Squad/Parts/Aero/fairings/fairingsCap
-		TextureNormalURL = Squad/Parts/Aero/fairings/fairings_normals
+		TextureURL = Knes/Parts/Launcher/Diamant/Diamant_fairings_diff
+		CapTextureURL = Knes/Parts/Launcher/Diamant/Diamant_fairingsCap
 
 		panelGrouping = 2
 		pivot = 0,0.03125,0
