--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Topaze_Booster_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Topaze_Booster_0625.cfg
@@ -40,7 +40,7 @@ PART
 	title = Diamant Topaze Booster
 	manufacturer = Knes
 	description = 
-	tags = Diamant Knes 0.625
+	tags = Diamant Knes 0.625 Topaze booster
 
     mass = 0.25
 
