--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Engine_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Engine_09375.cfg
@@ -32,7 +32,7 @@ PART
 	title = Diamant Vexin Engine
 	manufacturer = Knes
 	description = 
-	tags = Diamant Knes
+	tags = Diamant Knes 0.9375 engine
 
     mass = 0.25
 
@@ -58,7 +58,7 @@ PART
         exhaustDamage = True
         ignitionThreshold = 0.1
         minThrust = 0
-        maxThrust = 78
+        maxThrust = 80
         heatProduction = 200
 		
         PROPELLANT
@@ -110,12 +110,12 @@ PART
         thrustTransformName = thrustTransform
     }
 
-    EFFECTS
-    {
-        running
-        {
-            AUDIO
-            {
+	EFFECTS
+	{
+		running
+		{
+			AUDIO
+			{
 				channel = Ship
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
@@ -123,46 +123,76 @@ PART
 				pitch = 0.0 0.8
 				pitch = 1.0 1.0
 				loop = true
-            }
-            MODEL_MULTI_PARTICLE
-            {
-                modelName = Squad/FX/Monoprop_medium
-                transformName = thrustTransform
-                emission = 0.0 0.0
-                emission = 0.4 0.8
-                emission = 1.0 1.0
-                speed = 0.0 0.8
-                speed = 1.0 1.0
-                //localOffset = 0, 0, 1
-            }
-        }
-        engage
-        {
-            AUDIO
-            {
-                channel = Ship
-                clip = sound_vent_soft
-                volume = 1.0
-                pitch = 2.0
-                loop = false
-            }
-        }
-        flameout
-        {
-            PREFAB_PARTICLE
-            {
-                prefabName = fx_exhaustSparks_flameout_2
-                transformName = thrustTransform
-                oneShot = true
-            }
-            AUDIO
-            {
-                channel = Ship
-                clip = sound_explosion_low
-                volume = 1.0
-                pitch = 2.0
-                loop = false
-            }
-        }			
-    }  
+			}
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_smokeTrail_veryLarge
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.0
+				speed = 0.0 0.25
+				speed = 1.0 1.0
+				localOffset = 0, 0, 1
+			}
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_exhaustFlame_yellow_tiny_Z
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 1.0 2.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localOffset = 0, 0, 1				
+			}			
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/ksX_Exhaust
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.55
+				emission = 1.0 1.0
+				speed = 0.0 0.5
+				speed = 1.0 1.2
+				localPosition = 0, 0, 1
+			}
+		}
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_medium
+				loop = false
+			}
+		}
+		disengage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				loop = false
+			}
+		}
+		flameout
+		{
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_exhaustSparks_flameout_2
+				transformName = thrustTransform
+				oneShot = true
+			}
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_explosion_low
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+	}
 }
