Name and Tag Diamant = Diodeme

--- a/GameData/Knes/Parts/Core/Sat/_Knes_Sat_Asterix.cfg
+++ b/GameData/Knes/Parts/Core/Sat/_Knes_Sat_Asterix.cfg
@@ -26,7 +26,7 @@ PART
 	cost = 150
 	category = Pods
 	subcategory = 0
-	title = Asterix
+	title = A1 "Zebulon" Probe
 	manufacturer = Knes
 	description = #autoLOC_500338 //#autoLOC_500338 = QBE is Probodobodyne's latest development in probe miniaturization. Despite it's diminutive size, the QBE is a fully-functional and incredibly lightweight command unit. All this goodness comes at a price however: The QBE's tiny enclosure means there is no room for internal reaction wheels, and battery capacity is pitiful at best. Despite all this, or perhaps because of it, many engineers have found it to be ideally suited for those 'optional return' missions.
 	attachRules = 1,0,1,1,0
@@ -40,7 +40,7 @@ PART
 	explosionPotential = 0
 	vesselType = Probe
 	bulkheadProfiles = size0
-	tags = knes diamant asterix Zebulon command control (core cube kerbnet probe sas satellite space steer
+	tags = knes diamant Diodeme asterix Zebulon command control (core cube kerbnet probe sas satellite space steer
 
 	MODULE
 	{
