--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantA_FuelTank_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantA_FuelTank_09375.cfg
@@ -29,10 +29,10 @@ PART
 
 	category = FuelTank
 	subcategory = 0
-	title = DiamantA Fuel Tank
+	title = KEREB-D "Flashy" Fuel Tank
 	manufacturer = Knes
 	description = 
-	tags = Diamant Knes Fuel Tank 0.9375
+	tags = Diamant Knes Fuel Tank 0.9375 Diomede
 
 	mass = 0.3125
 
