--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_Avionics_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_Avionics_0625.cfg
@@ -30,10 +30,10 @@ PART
 	cost = 450
 	category     = Pods
 	subcategory  = 0
-	title        = DiamantB avionics
+	title        = KEREB-D "Administrator" avionics
 	manufacturer = Knes
 	description  = A small probe for a small rocket.
-	tags = Diamant Knes probe reaction wheels avionic control 0.625
+	tags = Diamant Knes probe reaction wheels avionic control 0.625 Diomede
 
 	mass = 0.035
 
