--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
@@ -16,7 +16,7 @@ PART
 	scale = 1
 	rescaleFactor = 1
 	
-	node_attach = 0.168, 0.0, 0.0, 1.0, 0.0, 0.0, 1
+	node_attach = 0.168, 0.0, 0.0, 1.0, 0.0, 0.0, 0
 	
 	bulkheadProfiles = srf	
 	attachRules = 0,1,0,1,0
@@ -26,10 +26,10 @@ PART
 	cost = 600
 	category = Aero
 	subcategory = 0
-	title = Diamant Fin
+	title = KEREB-D "Iconoclast" Fin
 	manufacturer = Knes
 	description = Small Fin for the Diamant Rocket
-	tags = Diamant Knes fin
+	tags = Diamant Knes fin Diomede
 	
 	mass = 0.02
 	
