--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Booster_P064_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Booster_P064_0625.cfg
@@ -37,10 +37,10 @@ PART
 
     category     = Propulsion
     subcategory  = 0
-	title = Diamant P064 Booster
+	title = KEREB-D "Mutineer" P064 Booster
 	manufacturer = Knes
 	description = 
-	tags = Diamant Knes 0.625 booster p064
+	tags = Diamant Knes 0.625 booster p064 Diomede
 
     mass = 0.15
 
