--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_0625.cfg
@@ -33,11 +33,11 @@ PART
 
 	category = Coupling
 	subcategory = 0
-	title = Decoupler Diamant 0.625
+	title = KEREB-D "Fomenter" Decoupler
 	manufacturer = Knes
 	description = A 0.625 Decoupler for Diamant Rocket
 		
-	tags = Knes Decoupler Diamant 0.625
+	tags = Knes Decoupler Diamant 0.625 Diomede
 
 	mass = 0.015
 
