--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_09375.cfg
@@ -33,11 +33,11 @@ PART
 
 	category = Coupling
 	subcategory = 0
-	title = Decoupler Diamant
+	title = KEREB-D "Agitator" Decoupler
 	manufacturer = Knes
-	description = A 0.9375 Decoupler for Diamant Rocket
+	description = A 0.9375 Decoupler for Diamant Rocket 
 		
-	tags = Knes Decoupler Diamant 0.9375
+	tags = Knes Decoupler Diamant 0.9375 Diomede
 
 	mass = 0.05
 
