--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Engine_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Engine_09375.cfg
@@ -29,10 +29,10 @@ PART
 
     category     = Propulsion
     subcategory  = 0
-	title = Diamant Vexin Engine
+	title = KEREB-D "Riotous" Engine
 	manufacturer = Knes
-	description = 
-	tags = Diamant Knes 0.9375 engine
+	description = Diamant Vexin Engine
+	tags = Diamant Knes 0.9375 engine Diomede
 
     mass = 0.25
 
