--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Topaze_Booster_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Topaze_Booster_0625.cfg
@@ -37,10 +37,10 @@ PART
 
     category     = Propulsion
     subcategory  = 0
-	title = Diamant Topaze Booster
+	title = KEREB-D "Insurgent" Booster
 	manufacturer = Knes
 	description = 
-	tags = Diamant Knes 0.625 Topaze booster
+	tags = Diamant Knes 0.625 0.9375 Topaze booster Diomede
 
     mass = 0.25
 
