--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_FuelTank_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_FuelTank_09375.cfg
@@ -29,10 +29,10 @@ PART
 
 	category = FuelTank
 	subcategory = 0
-	title = DiamantB Fuel Tank
+	title = KEREB-D "Bulky" Fuel Tank
 	manufacturer = Knes
 	description = 
-	tags = Diamant Knes Fuel Tank 0.9375
+	tags = Diamant Knes Fuel Tank 0.9375 Diomede
 
 	mass = 0.5313
 
