--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_0625.cfg
@@ -16,8 +16,8 @@ PART
 	scale = 1
 	rescaleFactor = 1
 
-	node_stack_top    = 0.0,  0.19416, 0.0,   0.0,  1.0,  0.0, 1
-	node_stack_bottom = 0.0, -0.03125, 0.0,   0.0, -1.0,  0.0, 1
+	node_stack_top    = 0.0,  0.19416, 0.0,   0.0,  1.0,  0.0, 0
+	node_stack_bottom = 0.0, -0.03125, 0.0,   0.0, -1.0,  0.0, 0
 
 	bulkheadProfiles = size0
 
@@ -29,11 +29,11 @@ PART
 
 	category = Payload
 	subcategory = 0
-	title = Diamant 0.625 fairing
+	title = KEREB-D "Assiduous" fairing
 	manufacturer = Knes
 	description = 0.625 Fairing
 
-	tags = Knes Diamant Fairing 0.625
+	tags = Knes Diamant Fairing 0.625 Diomede
 
 	mass = 0.025
 
@@ -96,4 +96,54 @@ PART
 		closedPosition = 0
 		lookupRadius = 0.35
 	}
+	
+	MODULE
+	{
+		name = ModuleCommand
+		minimumCrew = 0
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.01
+		}
+		hasHibernation = False
+	}
+	
+	MODULE
+	{
+		name = ModuleReactionWheel
+		PitchTorque = 1
+		YawTorque = 1
+		RollTorque = 1
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.002
+		}
+	}	
+	
+	MODULE
+	{
+		name = ModuleDataTransmitter
+		antennaType = DIRECT
+		packetInterval = 0.6
+		packetSize = 2
+		packetResourceCost = 8.0
+		requiredResource = ElectricCharge
+		antennaPower = 500000
+		antennaCombinable = False
+	}
+
+	MODULE
+	{
+		name = ModuleSAS
+		SASServiceLevel = 2
+	}
+	
+	RESOURCE
+	{
+		name = ElectricCharge
+		amount = 50.0
+		maxAmount = 50.0
+	}	
 }
