Name and Tag again

--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantA_FuelTank_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantA_FuelTank_09375.cfg
@@ -31,7 +31,7 @@ PART
 	subcategory = 0
 	title = KEREB-D "Flashy" Fuel Tank
 	manufacturer = Knes
-	description = 
+	description = The KEREB-D "Flashy" is a fuel tank made to be even more adorable than its bigger brother, the KEREB-D "Bulky". Handle stoically and with care. A nice 0.9375 Fuel Tank for the Diomede Rocket.
 	tags = Diamant Knes Fuel Tank 0.9375 Diomede
 
 	mass = 0.3125
