--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_Avionics_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_Avionics_0625.cfg
@@ -32,7 +32,7 @@ PART
 	subcategory  = 0
 	title        = KEREB-D "Administrator" avionics
 	manufacturer = Knes
-	description  = A small probe for a small rocket.
+	description  = The KEREB-D "Administrator" core provides advanced guidance assistance technology, and comes fitted with internal reaction wheels, RCS and decently-sized batteries. Keep Control of your rocket, like a remote-control rocket?.
 	tags = Diamant Knes probe reaction wheels avionic control 0.625 Diomede
 
 	mass = 0.035
