--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_FuelTank_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_FuelTank_09375.cfg
@@ -31,7 +31,7 @@ PART
 	subcategory = 0
 	title = KEREB-D "Bulky" Fuel Tank
 	manufacturer = Knes
-	description = 
+	description = A stretched variant of the KEREB-D "Flashy", the KEREB-D "Bulky" holds more fuel in a slightly stronger container. The red stripes along the side make the rocket go faster, our engineers tell us. Perfect for the Diomede B Rocket.
 	tags = Diamant Knes Fuel Tank 0.9375 Diomede
 
 	mass = 0.5313
