--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
@@ -28,7 +28,7 @@ PART
 	subcategory = 0
 	title = KEREB-D "Iconoclast" Fin
 	manufacturer = Knes
-	description = Small Fin for the Diamant Rocket
+	description = Small Fin for the Diomede Rocket. The fin is a corrugated fin obtained by molding an Kl-Kn alloy material.
 	tags = Diamant Knes fin Diomede
 	
 	mass = 0.02
