--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron_B.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron_B.cfg
@@ -28,7 +28,7 @@ PART
 	subcategory = 0
 	title = KEREB-D "Reactionary" Fin
 	manufacturer = Knes
-	description = Small Fin with small engine for the Diamant Rocket
+	description = A small propulsion fin for the Diomede Rocket. The fin is a corrugated fin obtained by molding an Kl-Kn alloy material.
 	tags = Diamant Knes fin engine Diomede
 	
 	mass = 0.025
