--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_0625.cfg
@@ -35,7 +35,7 @@ PART
 	subcategory = 0
 	title = KEREB-D "Fomenter" Decoupler
 	manufacturer = Knes
-	description = A 0.625 Decoupler for Diamant Rocket
+	description = A 0.625 Decoupler for Diomede Rocket. The manual says the explosive content is just enough to eject anything attached to the unit in a safe, controlled manner. The delivery guy did have a full bomb suit on though, so try not to drop it.
 		
 	tags = Knes Decoupler Diamant 0.625 Diomede
 
