--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_09375.cfg
@@ -35,7 +35,7 @@ PART
 	subcategory = 0
 	title = KEREB-D "Agitator" Decoupler
 	manufacturer = Knes
-	description = A 0.9375 Decoupler for Diamant Rocket 
+	description = A 0.9375 Decoupler for Diomede Rocket. Unlike Decouplers, Separators jettison everything attached to them. This new technology was very well received by rocket engineers everywhere.
 		
 	tags = Knes Decoupler Diamant 0.9375 Diomede
 
