--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Engine_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Engine_09375.cfg
@@ -31,7 +31,7 @@ PART
     subcategory  = 0
 	title = KEREB-D "Riotous" Engine
 	manufacturer = Knes
-	description = Diamant Vexin Engine
+	description = The KEREB-D "Riotous" may be small, but it packs quite a punch for its size. This little engine is a testament to how larger does not always mean more advanced, at least according to Knes's marketing department.
 	tags = Diamant Knes 0.9375 engine Diomede
 
     mass = 0.25
