--- a/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Decoupler_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Decoupler_03125.cfg
@@ -37,7 +37,7 @@ PART
 	manufacturer = Knes
 	description = A 0.3125 Decoupler for the Varinka Rocket
 		
-	tags = Knes Decoupler Veronique Vesta Varinka Diamant Diodeme 0.3125
+	tags = Knes Decoupler Veronique Vesta Varinka Diamant Diomede 0.3125
 
 	mass = 0.05
 
