--- a/GameData/Knes/Parts/Core/Sat/_Knes_Sat_Asterix.cfg
+++ b/GameData/Knes/Parts/Core/Sat/_Knes_Sat_Asterix.cfg
@@ -28,7 +28,7 @@ PART
 	subcategory = 0
 	title = A1 "Zebulon" Probe
 	manufacturer = Knes
-	description = #autoLOC_500338 //#autoLOC_500338 = QBE is Probodobodyne's latest development in probe miniaturization. Despite it's diminutive size, the QBE is a fully-functional and incredibly lightweight command unit. All this goodness comes at a price however: The QBE's tiny enclosure means there is no room for internal reaction wheels, and battery capacity is pitiful at best. Despite all this, or perhaps because of it, many engineers have found it to be ideally suited for those 'optional return' missions.
+	description = A1 "Zebulon" is Knes's latest development in probe miniaturization. A pretty rushed job.
 	attachRules = 1,0,1,1,0
 	mass = 0.015
 	dragModelType = default
@@ -40,7 +40,7 @@ PART
 	explosionPotential = 0
 	vesselType = Probe
 	bulkheadProfiles = size0
-	tags = knes diamant Diodeme asterix Zebulon command control (core cube kerbnet probe sas satellite space steer
+	tags = knes diamant Diomede asterix Zebulon command control (core cube kerbnet probe sas satellite space steer
 
 	MODULE
 	{
