--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Booster_P064_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Booster_P064_0625.cfg
@@ -39,7 +39,7 @@ PART
     subcategory  = 0
 	title = KEREB-D "Mutineer" P064 Booster
 	manufacturer = Knes
-	description = 
+	description = This small 0.625 booster provides a nice kick to lift small payloads to considerable heights.
 	tags = Diamant Knes 0.625 booster p064 Diomede
 
     mass = 0.15
