--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_0625.cfg
@@ -31,7 +31,7 @@ PART
 	subcategory = 0
 	title = KEREB-D "Assiduous" fairing
 	manufacturer = Knes
-	description = 0.625 Fairing
+	description = This 0.625 protective fairing have the benefit of making the craft more aerodynamic, and protect your precious Satellite. This fairing module provides advanced guidance assistance technology, and comes fitted with internal reaction wheels and decently-sized batteries.
 
 	tags = Knes Diamant Fairing 0.625 Diomede
 
