--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Topaze_Booster_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Topaze_Booster_0625.cfg
@@ -39,7 +39,7 @@ PART
     subcategory  = 0
 	title = KEREB-D "Insurgent" Booster
 	manufacturer = Knes
-	description = 
+	description = Packing a powerful punch for its size, The KEREB-D "Insurgent" is widely used in many space programs.
 	tags = Diamant Knes 0.625 0.9375 Topaze booster Diomede
 
     mass = 0.25
