--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Topaze_Booster_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Topaze_Booster_0625.cfg
@@ -97,8 +97,8 @@ PART
     MODULE
     {
         name = ModuleGimbal
-        gimbalTransformName = thrustTransform
-        gimbalRange = 7.5
+        gimbalTransformName = Gimbal
+        gimbalRange = 4.5
     }
 
     MODULE
