--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Booster_P064_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Booster_P064_0625.cfg
@@ -22,14 +22,6 @@ PART
 	
     bulkheadProfiles = size0
     attachRules = 1,1,1,1,0
-
-	fx_exhaustFlame_yellow = 0.0, -11.2673, 0.0, 0.0, 1.0, 0.0, running
-	fx_exhaustSparks_yellow = 0.0, -11.2673, 0.0, 0.0, 1.0, 0.0, running
-	fx_smokeTrail_medium = 0.0, -11.2673, 0.0, 0.0, 1.0, 0.0, running
-	sound_vent_medium = engage
-	sound_rocket_hard = running
-	sound_vent_soft = disengage
-	sound_explosion_low = flameout	
 	
     TechRequired = start
     entryCost = 800
@@ -121,5 +113,91 @@ PART
         falloff = 2
         thrustTransformName = thrustTransform
     }
-
+	
+	EFFECTS
+	{
+		running_solid
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_hard
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.2
+				pitch = 1.0 1.0
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = smoketrail
+				modelName = Knes/Resources/Plumes/diamantTrailWhite
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.25
+				emission = 1.0 1.0
+				energy = 0.8 0.3
+				energy = 1 0.5
+				speed = 0.5 0.5
+				speed = 1.0 1.0
+				localPosition = 0, 0, 1
+				localScale = 1, 1, 1
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = blaze
+				modelName = PlumeParty/Engines/Solid/RushTameChunks
+				transformName = thrustTransform
+				emission = 0.1 0.0
+				emission = 0.5 1.5
+				emission = 1.0 1.0
+				speed = 0.2 0.2
+				speed = 1.0 1.0
+				energy = 0.0 0.2
+				energy = 0.5 0.5
+				localScale = 0.3, 0.3, 0.3
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = chunk
+				modelName = PlumeParty/Engines/Solid/RushTameBlaze
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.8 1.0
+				speed = 0.0 0.2
+				speed = 0.5 0.5
+				energy = 0.0 0.0
+				energy = 0.5 1.0
+				localScale = 0.3, 0.3, 0.3
+			}
+		}
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_medium
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+		flameout
+		{
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_exhaustSparks_flameout_2
+				transformName = thrustTransform
+				oneShot = true
+			}
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_explosion_low
+				volume = 1.5
+				pitch = 1.2
+				loop = false
+			}
+		}
+	}
 }
