--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Engine_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Engine_09375.cfg
@@ -124,39 +124,63 @@ PART
 				pitch = 1.0 1.0
 				loop = true
 			}
-			PREFAB_PARTICLE
-			{
-				prefabName = fx_smokeTrail_veryLarge
-				transformName = thrustTransform
-				emission = 0.0 0.0
-				emission = 0.05 0.0
-				emission = 0.075 0.25
-				emission = 1.0 1.0
-				speed = 0.0 0.25
-				speed = 1.0 1.0
-				localOffset = 0, 0, 1
-			}
-			PREFAB_PARTICLE
-			{
-				prefabName = fx_exhaustFlame_yellow_tiny_Z
-				transformName = thrustTransform
-				emission = 0.0 0.0
-				emission = 1.0 2.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				localOffset = 0, 0, 1				
-			}			
 			MODEL_MULTI_PARTICLE
 			{
-				modelName = Squad/FX/ksX_Exhaust
+				name = smoketrail
+				modelName = Knes/Resources/Plumes/diamantTrailRed
 				transformName = thrustTransform
-				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0.8 0.5
+				energy = 1 1
+				speed = 0 0.5
+				speed = 1 0.5
+				localPosition = 0, 0, 1
+				// localScale = 1, 1, 1
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = flare
+				modelName = Knes/Resources/Plumes/diamantFlare
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 0.5 1
+				speed = 0 0.5
+				speed = 1 1
+				localPosition = 0, 0, 1
+				localScale = 0.7, 0.7, 0.7
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = shock
+				modelName = Knes/Resources/Plumes/diamantShock
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 0.5 1
+				speed = 0 0.5
+				speed = 1 1
+				localPosition = 0, 0, 0
+				localScale = 0.7, 0.7, 0.7
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = wisp
+				modelName = Knes/Resources/Plumes/diamantWisp
+				transformName = thrustTransform
 				emission = 0.05 0.0
 				emission = 0.075 0.55
 				emission = 1.0 1.0
-				speed = 0.0 0.5
-				speed = 1.0 1.2
+				energy = 0 0.5
+				energy = 1 1
 				localPosition = 0, 0, 1
+				localScale = 0.7, 0.7, 0.7
 			}
 		}
 		engage
