--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Booster_P064_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Booster_P064_0625.cfg
@@ -49,7 +49,7 @@ PART
 
 	MODULE
 	{
-		name = ModuleEngines
+		name = ModuleEnginesFX
 		thrustVectorTransformName = thrustTransform
 		throttleLocked = True
 		exhaustDamage = True
@@ -63,6 +63,7 @@ PART
 		allowRestart = False
 		fxOffset = 0, 0, 0.4
 		EngineType = SolidBooster
+		runningEffectName = running_solid		
 		
 		PROPELLANT
 		{
@@ -146,7 +147,7 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				name = blaze
-				modelName = PlumeParty/Engines/Solid/RushTameChunks
+				modelName = Knes/Resources/Plumes/RushTameChunks
 				transformName = thrustTransform
 				emission = 0.1 0.0
 				emission = 0.5 1.5
@@ -160,7 +161,7 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				name = chunk
-				modelName = PlumeParty/Engines/Solid/RushTameBlaze
+				modelName = Knes/Resources/Plumes/RushTameBlaze
 				transformName = thrustTransform
 				emission = 0.0 0.0
 				emission = 0.8 1.0
