--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Topaze_Booster_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Topaze_Booster_0625.cfg
@@ -49,7 +49,7 @@ PART
 
 	MODULE
 	{
-		name = ModuleEngines
+		name = ModuleEnginesFX
 		thrustVectorTransformName = thrustTransform
 		throttleLocked = True
 		exhaustDamage = True
@@ -61,8 +61,9 @@ PART
 		engineAccelerationSpeed = 10.0
 		allowShutdown = True
 		allowRestart = False
-		fxOffset = 0, 0, 0.6
+		fxOffset = 0, 0, 0.4
 		EngineType = SolidBooster
+		runningEffectName = running_solid	
 		
 		PROPELLANT
 		{
@@ -132,7 +133,7 @@ PART
 			{
 				name = smoketrail
 				modelName = Knes/Resources/Plumes/diamantTrailWhite
-				transformName = thrustTransform
+				transformName = fxTransform
 				emission = 0.05 0.0
 				emission = 0.1 0.5
 				emission = 1.0 2.0
@@ -146,8 +147,8 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				name = blaze
-				modelName = PlumeParty/Engines/Solid/RushTameChunks
-				transformName = thrustTransform
+				modelName = Knes/Resources/Plumes/RushTameChunks
+				transformName = fxTransform
 				emission = 0.1 0.0
 				emission = 0.5 1.8
 				emission = 1.0 1.2
@@ -160,8 +161,8 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				name = chunk
-				modelName = PlumeParty/Engines/Solid/RushTameBlaze
-				transformName = thrustTransform
+				modelName = Knes/Resources/Plumes/RushTameBlaze
+				transformName = fxTransform
 				emission = 0.0 0.0
 				emission = 0.8 1.0
 				speed = 0.0 0.5
@@ -187,7 +188,7 @@ PART
 			PREFAB_PARTICLE
 			{
 				prefabName = fx_exhaustSparks_flameout_2
-				transformName = thrustTransform
+				transformName = fxTransform
 				oneShot = true
 			}
 			AUDIO
