--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Engine_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Engine_0625.cfg
@@ -109,12 +109,12 @@ PART
         thrustTransformName = thrustTransform
     }
 
-    EFFECTS
-    {
-        running
-        {
-            AUDIO
-            {
+	EFFECTS
+	{
+		running
+		{
+			AUDIO
+			{
 				channel = Ship
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
@@ -122,46 +122,100 @@ PART
 				pitch = 0.0 0.8
 				pitch = 1.0 1.0
 				loop = true
-            }
-            MODEL_MULTI_PARTICLE
-            {
-                modelName = Squad/FX/Monoprop_medium
-                transformName = thrustTransform
-                emission = 0.0 0.0
-                emission = 0.4 0.8
-                emission = 1.0 1.0
-                speed = 0.0 0.8
-                speed = 1.0 1.0
-                //localOffset = 0, 0, 1
-            }
-        }
-        engage
-        {
-            AUDIO
-            {
-                channel = Ship
-                clip = sound_vent_soft
-                volume = 1.0
-                pitch = 2.0
-                loop = false
-            }
-        }
-        flameout
-        {
-            PREFAB_PARTICLE
-            {
-                prefabName = fx_exhaustSparks_flameout_2
-                transformName = thrustTransform
-                oneShot = true
-            }
-            AUDIO
-            {
-                channel = Ship
-                clip = sound_explosion_low
-                volume = 1.0
-                pitch = 2.0
-                loop = false
-            }
-        }			
-    }  
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = smoketrail
+				modelName = Knes/Resources/Plumes/diamantTrailRed
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0.8 0.5
+				energy = 1 1
+				speed = 0 0.5
+				speed = 1 0.5
+				localPosition = 0, 0, 1
+				// localScale = 1, 1, 1
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = flare
+				modelName = Knes/Resources/Plumes/diamantFlare
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 0.5 1
+				speed = 0 0.5
+				speed = 1 1
+				localPosition = 0, 0, 1
+				localScale = 0.7, 0.7, 0.7
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = shock
+				modelName = Knes/Resources/Plumes/diamantShock
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 0.5 1
+				speed = 0 0.5
+				speed = 1 1
+				localPosition = 0, 0, 0
+				localScale = 0.7, 0.7, 0.7
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = wisp
+				modelName = Knes/Resources/Plumes/diamantWisp
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.075 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 1 1
+				localPosition = 0, 0, 1
+				localScale = 0.7, 0.7, 0.7
+			}
+		}
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_medium
+				loop = false
+			}
+		}
+		disengage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				loop = false
+			}
+		}
+		flameout
+		{
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_exhaustSparks_flameout_2
+				transformName = thrustTransform
+				oneShot = true
+			}
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_explosion_low
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+	}
 }
