--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Avionics_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Avionics_09375.cfg
@@ -23,11 +23,11 @@ PART
 	buoyancy = 2	
 
 	bulkheadProfiles = size0
-	attachRules = 1,0,1,1,0
+	attachRules = 1,1,1,1,0
 
-	TechRequired = start
+	TechRequired = basicRocketry
 	entryCost = 2800
-	cost = 450
+	cost = 250
 	category     = Pods
 	subcategory  = 0
 	title        = KEREB-D "Blender" avionics
