--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
@@ -21,9 +21,9 @@ PART
 	bulkheadProfiles = srf	
 	attachRules = 0,1,0,1,0
 	
-	TechRequired = aviation
-	entryCost = 3800
-	cost = 600
+	TechRequired = basicRocketry
+	entryCost = 800
+	cost = 100
 	category = Aero
 	subcategory = 0
 	title = KEREB-D "Iconoclast" Fin
