--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Booster_P064_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Booster_P064_0625.cfg
@@ -23,9 +23,9 @@ PART
     bulkheadProfiles = size0
     attachRules = 1,1,1,1,0
 	
-    TechRequired = start
+    TechRequired = basicRocketry
     entryCost = 800
-    cost = 100
+    cost = 90
 
     category     = Propulsion
     subcategory  = 0
