--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_09375.cfg
@@ -27,9 +27,9 @@ PART
 
 	attachRules = 1,0,1,1,0
 
-	TechRequired = start
+	TechRequired = basicRocketry
 	entryCost = 300
-	cost = 50
+	cost = 70
 
 	category = Coupling
 	subcategory = 0
