--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_0625.cfg
@@ -21,11 +21,11 @@ PART
 
 	bulkheadProfiles = size0
 
-	attachRules = 1,0,1,1,0
+	attachRules = 1,1,1,1,0
 
-	TechRequired = start
+	TechRequired = basicRocketry
 	entryCost = 300
-	cost = 100
+	cost = 80
 
 	category = Payload
 	subcategory = 0
@@ -69,14 +69,10 @@ PART
 
 		xSectionHeightMin = 0.2
 		xSectionHeightMax = 1
-
-		//edgeSlide = 0.15
-		//edgeWarp = 0
-		//noseTip = 1.0
 		
 		edgeSlide = 0.05
 		edgeWarp = 0
-		noseTip = 0.5
+		noseTip = 0.2
 		
 		UnitAreaMass = 0.01
 		UnitAreaCost = 6
