--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_09375.cfg
@@ -22,11 +22,11 @@ PART
 
 	bulkheadProfiles = size0
 
-	attachRules = 1,0,1,1,0
+	attachRules = 1,1,1,1,0
 
-	TechRequired = start
+	TechRequired = basicRocketry
 	entryCost = 300
-	cost = 100
+	cost = 120
 
 	category = Payload
 	subcategory = 0
