--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Engine_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Engine_09375.cfg
@@ -23,9 +23,9 @@ PART
     bulkheadProfiles = size0
     attachRules = 1,1,1,1,0
 
-    TechRequired = start
+    TechRequired = basicRocketry
     entryCost = 800
-    cost = 100
+    cost = 320
 
     category     = Propulsion
     subcategory  = 0
