--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_P16_125.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_P16_125.cfg
@@ -39,7 +39,7 @@ PART
     subcategory  = 0
 	title = KEREB-D "Chunky" P16 Booster
 	manufacturer = Knes
-	description = 
+	description = Filled with a new, even more volatile fuel, the P16 offers semi-reliable performance at a good price.
 	tags = Diamant Knes 1.25 booster p16 Diomede
 
     mass = 0.18
