--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_P10_125.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_P10_125.cfg
@@ -39,7 +39,7 @@ PART
     subcategory  = 0
 	title = KEREB-D "Dumby" P10 Booster
 	manufacturer = Knes
-	description = 
+	description = Packing a powerful punch for its size, The P10 is widely used in many space programs, whenever the need to save cash is greater than the need to keep astronauts alive.
 	tags = Diamant Knes 1.25 booster p10 Diomede
 
     mass = 0.15
