--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Adapter_125_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Adapter_125_09375.cfg
@@ -30,9 +30,9 @@ PART
 	
 	category = Coupling
 	subcategory = 0
-	title = LRBA-D "" Adapter 0.625 to 0.9375
+	title = LRBA-D "Pawn" Adapter 0.625 to 0.9375
 	manufacturer = Knes
-	description = A beautiful Adapter 0.625 to 0.9375.
+	description = A beautiful Adapter / Decoupler 0.625 to 0.9375.
 	tags = Diomede Diamant Knes 0.625 0.9375
 
     mass = 0.05
