--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Booster_P03.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Booster_P03.cfg
@@ -29,7 +29,7 @@ PART
 	cost = 75
 	category = Engine
 	subcategory = 0
-	title = KEREB-D "Hector" Booster
+	title = KEREB-D "Hector" P03 Booster
 	manufacturer = Knes
 	description = A small canister filled with what appears to be solid rocket fuel.
 	
@@ -83,5 +83,42 @@ PART
 		amount = 30
 		maxAmount = 30
 	}	
-	
+	MODULE
+    {
+        name = FXModuleThrottleEffects
+        fxModuleNames = colorChanger
+        responseSpeed = 0.002
+        dependOnEngineState = True
+        dependOnThrottle = True
+    }
+
+    MODULE
+    {
+        name = ModuleColorChanger
+        moduleID = colorChanger
+		animRate = 0.05
+        shaderProperty = _EmissiveColor
+        toggleInEditor = false
+        toggleInFlight = false
+        redCurve
+        {
+            key = 0 1
+            key = 1 1
+        }
+        greenCurve
+        {
+            key = 0 1
+            key = 1 1
+        }
+        blueCurve
+        {
+            key = 0 1
+            key = 1 1
+        }
+        alphaCurve
+        {
+            key = 0 0
+            key = 1 1
+        }
+    }		
 }
