--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Booster_Rita_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Booster_Rita_09375.cfg
@@ -194,4 +194,42 @@ PART
 			}
 		}
 	}
+	MODULE
+    {
+        name = FXModuleThrottleEffects
+        fxModuleNames = colorChanger
+        responseSpeed = 0.002
+        dependOnEngineState = True
+        dependOnThrottle = True
+    }
+
+    MODULE
+    {
+        name = ModuleColorChanger
+        moduleID = colorChanger
+		animRate = 0.05
+        shaderProperty = _EmissiveColor
+        toggleInEditor = false
+        toggleInFlight = false
+        redCurve
+        {
+            key = 0 1
+            key = 1 1
+        }
+        greenCurve
+        {
+            key = 0 1
+            key = 1 1
+        }
+        blueCurve
+        {
+            key = 0 1
+            key = 1 1
+        }
+        alphaCurve
+        {
+            key = 0 0
+            key = 1 1
+        }
+    }		
 }
