New Fairing and Adapter

--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_09375.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_09375.cfg
@@ -4,13 +4,13 @@
 
 PART
 {
-	name = Knes_Aero_Fairing_125
+	name = Knes_Aero_Fairing_09375
 	module = Part
 	author = HarvesteR/Well
 		
 	MODEL
 	{
-		model = Knes/Parts/Core/Fairings/Knes_Aero_Fairing_125
+		model = Knes/Parts/Core/Fairings/Knes_Aero_Fairing_09375
 		scale = 1,1,1
 	}
 
@@ -27,11 +27,11 @@ PART
 	cost = 300
 	category = Payload
 	subcategory = 0
-	title = Knes Fairing (1.25m)
+	title = Knes Fairing (0.9375m)
 	manufacturer = Knes
 	description = #autoLOC_500170 //#autoLOC_500170 = While the Kerbals at Mission Control were still figuring out how to get their rockets back down to Kerbin safely, the research engineers at FLOOYD were quickly realising that protecting parts on ascent was just as important. Heavy research into two-dimensional-input driven procedural construction was then funded with the hopes of making protective shells for important payloads and interstage areas of the crafts. The protective shells also have the benefit of making the craft more aerodynamic, hopefully saving on precious rocket fuel! The AE-FF1 is the smallest size available from FLOOYD.
 	attachRules = 1,0,1,1,0
-	mass = 0.075
+	mass = 0.055
 	thermalMassModifier = 2.0
 	skinMassPerArea = 4.0
 	skinInternalConductionMult = 0.25
@@ -53,47 +53,46 @@ PART
 	MODULE
 	{
 		name = ModuleProceduralFairing
-		
-		nSides = 32
+
+		nSides = 24
 		nArcs = 2
 		nCollidersPerXSection = 8
 		TextureURL = Knes/Parts/Core/Fairings/fairings_diff
-		CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap	
-		
-		panelGrouping = 3
+		CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap
+
+		panelGrouping = 2
 		pivot = 0,0.05,0
 		axis = 0,1,0
-		
-		baseRadius = 0.625
+
+		baseRadius = 0.46875
 		maxRadius = 1.5
 		capRadius = 0.2
 		snapThreshold = 0.1
-		
+
 		xSectionHeightMin = 0.2
 		xSectionHeightMax = 2
-		
+
 		edgeSlide = 0.15
 		edgeWarp = 0
-		noseTip = 0.4
-		
+		noseTip = 0.5
+
 		UnitAreaMass = 0.01
 		UnitAreaCost = 6
-		
+
+		ejectionForce = 500
+		useClamshell = True
+
 		stagingToggleEnabledEditor = True
 		stagingToggleEnabledFlight = False
 		stagingEnableText = #autoLOC_502000 //#autoLOC_502000 = Fairing Not Staged
 		stagingDisableText = #autoLOC_502001 //#autoLOC_502001 = Fairing Staged
 	}
-	
 	MODULE
 	{
 		name = ModuleCargoBay
 		DeployModuleIndex = 0
 		closedPosition = 0
 		lookupRadius = 0.75
-		
-		// nodeOuterAftID = bottom
-		// nodeInnerAftID = top
 	}
 
 }
