--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_250.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_250.cfg
@@ -1,4 +1,8 @@
-﻿PART
+﻿
+// ʕ•ᴥ•ʔ    Knes Mod   °(ᵔᴥᵔ)°
+// Stéphane Colombain aka Well
+
+PART
 {
 	name = Knes_Aero_Fairing_250
 	module = Part
@@ -12,8 +16,8 @@
 
 	rescaleFactor = 1
 	
-	node_stack_top = 0.0, 0.1, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.09, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_top = 0.0, 0.075, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -0.075, 0.0, 0.0, -1.0, 0.0, 2
 	
 	fx_gasBurst_white = 0.0, 0.3, 0.0, 0.0, 1.0, 0.0, deploy
 	sound_vent_large = deploy
@@ -57,7 +61,7 @@
 		CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap	
 		
 		panelGrouping = 3
-		pivot = 0,0.065,0
+		pivot = 0,0.075,0
 		axis = 0,1,0
 		
 		baseRadius = 1.25
