--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_09375.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_09375.cfg
@@ -16,8 +16,8 @@ PART
 
 	rescaleFactor = 1
 	
-	node_stack_top = 0.0, 0.05, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.05, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_top = 0.0, 0.05, 0.0, 0.0, 1.0, 0.0, 0
+	node_stack_bottom = 0.0, -0.05, 0.0, 0.0, -1.0, 0.0, 0
 	
 	fx_gasBurst_white = 0.0, 0.3, 0.0, 0.0, 1.0, 0.0, deploy
 	sound_vent_large = deploy
@@ -47,7 +47,7 @@ PART
 	stageOffset = 1
 	childStageOffset = 1
 	inverseStageCarryover = false
-	bulkheadProfiles = size1
+	bulkheadProfiles = size0p5
 	tags = #autoLOC_500171 //#autoLOC_500171 = aero )cap cargo knes cone contain drag fairing hollow inter nose payload protect rocket shroud stage (stor transport
 
 	MODULE
