--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Aero_NoseCone_A.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Aero_NoseCone_A.cfg
@@ -11,7 +11,7 @@
 	
 	rescaleFactor = 1
 	
-	node_stack_bottom01 = 0.0, -0.887, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_bottom01 = 0.0, -0.887, 0.0, 0.0, -1.0, 0.0, 2
 	node_attach = 0, 0, -0.9378, 0.0, 0.0, 1.0
 	
 	CoMOffset = 0.0, 0.0, -0.313
@@ -36,7 +36,7 @@
 	crashTolerance = 10
 	maxTemp = 2000
 	fuelCrossFeed = True
-	bulkheadProfiles = size1
+	bulkheadProfiles = size1p5
 	thermalMassModifier = 6.0
 	emissiveConstant = 0.95
 	tags = knes aero aircraft booster )cap drag fligh plane rocket stab stream tail
