--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Command_Cortex.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Command_Cortex.cfg
@@ -34,6 +34,7 @@ PART
 	crashTolerance = 8
 	maxTemp = 2000
 	explosionPotential = 0.5
+	bulkheadProfiles = size3
 	breakingForce = 200
 	breakingTorque = 200
 	tags = 3.75m probe control instrument unit knes Ariane
