--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Engine_Zebulon.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Engine_Zebulon.cfg
@@ -48,7 +48,7 @@
 	breakingForce = 180
 	breakingTorque = 180
 	maxTemp = 2000 // = 3600
-	bulkheadProfiles = size2
+	bulkheadProfiles = size1p5
 	tags = propuls rocket Knes sustain Zebulon
 
 	MODULE
