--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Fuel_Tanks_1875_H10.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Fuel_Tanks_1875_H10.cfg
@@ -11,8 +11,8 @@
 	
 	rescaleFactor = 0.5
 	
-	node_stack_top = 0.0, 3.7407, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_bottom = 0.0, -3.742, 0.0, 0.0, -1.0, 0.0, 3
+	node_stack_top = 0.0, 3.7407, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -3.742, 0.0, 0.0, -1.0, 0.0, 2
 	node_attach = 0.0, 0.0, -1.875, 0.0, 0.0, 1.0
 	TechRequired = advRocketry
 	entryCost = 6600
@@ -32,7 +32,7 @@
 	breakingForce = 200
 	breakingTorque = 200
 	maxTemp = 2000 // = 2900
-	bulkheadProfiles = size3, srf
+	bulkheadProfiles = size1p5
 	tags = knes fuel fueltank ?lfo propellant rocket
 
 	RESOURCE
