--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_NoseCone_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_NoseCone_09375.cfg
@@ -20,6 +20,7 @@ PART
     node_stack_bottom = 0.0, -0.45727, 0.0, 0.0, -1.0, 0.0, 0
 	node_attach       = 0.0,  0.0, 0.46875, 0.0,  0.0, -1.0
 	
+	bulkheadProfiles = size0p5	
 	TechRequired = basicRocketry
 	entryCost = 1500
 	cost = 180
