--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Adapter_0625to03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Adapter_0625to03125.cfg
@@ -16,12 +16,12 @@ PART
 	scale = 1
 	rescaleFactor = 1
 
-	node_stack_top    = 0.0,  0.4051, 0.0,   0.0,  1.0,  0.0, 1
-	node_stack_bottom = 0.0, -0.4051, 0.0,   0.0, -1.0,  0.0, 1
+	node_stack_top    = 0.0,  0.4051, 0.0,   0.0,  1.0,  0.0, 0
+	node_stack_bottom = 0.0, -0.4051, 0.0,   0.0, -1.0,  0.0, 0
 	
 	fx_gasBurst_white = 0.0, 0.4051, 0.0, 0.0, 1.0, 0.0, decouple
 	
-	bulkheadProfiles = size0
+	bulkheadProfiles = size0, size00
 	attachRules = 1,0,1,1,0
 	
 	TechRequired = start
