--- a/GameData/Knes/Parts/Core/Adapters/Knes_Structural_Guepiere.cfg
+++ b/GameData/Knes/Parts/Core/Adapters/Knes_Structural_Guepiere.cfg
@@ -13,10 +13,10 @@
 	rescaleFactor = 1.5
 
 	
-	node_stack_top = 0.0, 0.75703, 0.0, 0.0, 1.0, 0.0
-	node_stack_bottom01 = 0, -0.43002, -0.72236, 0.0, -1.0, 0.0
-	node_stack_bottom02 = -0.62558, -0.43002, 0.36118, 0.0, -1.0, 0.0
-	node_stack_bottom03 = 0.62558, -0.43002, 0.36118, 0.0, -1.0, 0.0
+	node_stack_top = 0.0, 0.75703, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom01 = 0, -0.43002, -0.72236, 0.0, -1.0, 0.0, 2
+	node_stack_bottom02 = -0.62558, -0.43002, 0.36118, 0.0, -1.0, 0.0, 2
+	node_stack_bottom03 = 0.62558, -0.43002, 0.36118, 0.0, -1.0, 0.0, 2
 	
 	TechRequired = advConstruction
 	entryCost = 2100
@@ -36,7 +36,7 @@
 	crashTolerance = 12
 	maxTemp = 2000 // = 3400
 	fuelCrossFeed = True
-	bulkheadProfiles = size1
+	bulkheadProfiles = size1p5
 	tags = knes mount multi split three triple
 	
 	RESOURCE
