--- a/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_G09375.cfg
+++ b/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_G09375.cfg
@@ -16,8 +16,8 @@ PART
 	scale = 1
 	rescaleFactor = 1
 
-	node_stack_top    = 0.0,  0.0625, 0.0, 0.0,  1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.0625, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_top    = 0.0,  0.0625, 0.0, 0.0,  1.0, 0.0, 0
+	node_stack_bottom = 0.0, -0.0625, 0.0, 0.0, -1.0, 0.0, 0
 	
 	buoyancy = 0.1
 	fx_gasBurst_white = 0.0, 0.0650517, 0.0, 0.0, 1.0, 0.0, decouple
@@ -41,7 +41,7 @@ PART
 	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
-	bulkheadProfiles = size1
+	bulkheadProfiles = size0p5
 	tags = knes break decouple separat split stag
 	
 	MODULE
