--- a/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_G1875.cfg
+++ b/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_G1875.cfg
@@ -16,12 +16,12 @@ PART
 	scale = 1
 	rescaleFactor = 1
 
-	node_stack_top    = 0.0,  0.0625, 0.0, 0.0,  1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.0625, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_top    = 0.0,  0.0625, 0.0, 0.0,  1.0, 0.0, 2
+	node_stack_bottom = 0.0, -0.0625, 0.0, 0.0, -1.0, 0.0, 2
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	stageOffset = 1
 	childStageOffset = 1	
-	bulkheadProfiles = size1.5
+	bulkheadProfiles = size1p5
 	attachRules = 1,0,1,1,0
 	TechRequired = generalConstruction
 	entryCost = 600
