--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Booster_P80.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Booster_P80.cfg
@@ -13,9 +13,9 @@
 	rescaleFactor = 1
 	scale = 1
 	
-	node_stack_bottom = 0.0, -9.1, 0.0, 0.0, -1.0, 0.0, 1
-	node_stack_top = 0.0, 3.44, 0.0, 0.0, 1.0, 0.0, 1
-	node_attach = 0.0, 0.0, -0.9375, 0.0, 0.0, 1.0, 1
+	node_stack_bottom = 0.0, -9.1, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_top = 0.0, 3.44, 0.0, 0.0, 1.0, 0.0, 2
+	node_attach = 0.0, 0.0, -0.9375, 0.0, 0.0, 1.0
 
 	fx_exhaustFlame_yellow = 0.0, -10.0, 0.0, 0.0, 1.0, 0.0, running
 	fx_exhaustSparks_yellow = 0.0, -10.0, 0.0, 0.0, 1.0, 0.0, running
@@ -47,7 +47,7 @@
 	crashTolerance = 7
 	maxTemp = 2000 // = 3600
 	stagingIcon = SOLID_BOOSTER
-	bulkheadProfiles = size1, srf
+	bulkheadProfiles = size1p5
 	tags = knes P80 moar motor rocket srb
 	
 	MODULE
