--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Command_Minus.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Command_Minus.cfg
@@ -14,8 +14,8 @@ PART
 
 // --- node definitions ---
 
-	node_stack_top = 0.0, 0.1451, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.14685, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_top = 0.0, 0.1451, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -0.14685, 0.0, 0.0, -1.0, 0.0, 2
 	attachRules = 1,0,1,1,0
 
 	TechRequired = flightControl
@@ -37,7 +37,7 @@ PART
 	breakingForce = 100
 	breakingTorque = 100
 	tags = 1.875m probe control instrument unit knes Minus
-
+	bulkheadProfiles = size1p5
 	vesselType = Probe
 
 	MODULE
