--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Utility_SafeSystem_1875.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Utility_SafeSystem_1875.cfg
@@ -23,8 +23,8 @@
 	
 
 	
-	node_stack_top = 0.0, 1.13, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, -1.104, 0.0, 0.0, -1.0, 0.0, 3
+	node_stack_top = 0.0, 1.13, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_bottom = 0.0, -1.104, 0.0, 0.0, -1.0, 0.0, 2
 	
 	buoyancy = 0.375
 	TechRequired = stability
@@ -45,7 +45,7 @@
 	breakingForce = 200
 	breakingTorque = 200
 	maxTemp = 2000 // = 2900
-	bulkheadProfiles = size2, size3
+	bulkheadProfiles = size1, size1p5
 	tags = Knes cone rockomax
 	stagingIcon = SOLID_BOOSTER	
 	
