--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Booster_P03.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Booster_P03.cfg
@@ -16,7 +16,7 @@ PART
 	scale = 1
 	rescaleFactor = 1
 	
-	node_attach = 0.0, 0.0, 0.1, 0.0, 0.0, -1.0, 1
+	node_attach = 0.0, 0.0, 0.1, 0.0, 0.0, -1.0
 	attachRules = 0,1,0,0,0
 	
 	fx_exhaustFlame_yellow_tiny = 0.0, -1.5, 0.2, 0.0, 1.0, 0.0, running
