--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_P10_9375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_P10_9375.cfg
@@ -20,7 +20,7 @@ PART
     node_stack_bottom = 0.0, -1.4625, 0.0, 0.0, -1.0, 0.0, 0
 	node_attach       = 0.0,  0.0, 0.46875, 0.0,  0.0, -1.0
 	
-    bulkheadProfiles = size0
+    bulkheadProfiles = size0p5
     attachRules = 1,1,1,1,0
 	
 	fx_exhaustFlame_yellow = 0.0, -11.2673, 0.0, 0.0, 1.0, 0.0, running
