--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Avionics_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Avionics_09375.cfg
@@ -22,7 +22,7 @@ PART
 	
 	buoyancy = 2	
 
-	bulkheadProfiles = size0
+	bulkheadProfiles = size0p5
 	attachRules = 1,1,1,1,0
 
 	TechRequired = basicRocketry
