--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
@@ -16,7 +16,7 @@ PART
 	scale = 1
 	rescaleFactor = 1
 	
-	node_attach = 0.168, 0.0, 0.0, 1.0, 0.0, 0.0, 0
+	node_attach = 0.168, 0.0, 0.0, 1.0, 0.0, 0.0
 	
 	bulkheadProfiles = srf	
 	attachRules = 0,1,0,1,0
