--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_09375.cfg
@@ -20,7 +20,7 @@ PART
 	node_stack_top    = 0.0,  0.1, 0.0,   0.0,  1.0,  0.0, 0
 	node_stack_bottom = 0.0, -0.1, 0.0,   0.0, -1.0,  0.0, 0
 
-	bulkheadProfiles = size0
+	bulkheadProfiles = size0p5
 
 	attachRules = 1,1,1,1,0
 
