--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
@@ -16,7 +16,7 @@ PART
 	scale = 1
 	rescaleFactor = 1
 	
-	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
 	
 	TechRequired = survivability
 	entryCost = 20000
