--- a/GameData/Knes/Parts/LiftingsBodies/IXV/Knes_Command_K-IXV.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/IXV/Knes_Command_K-IXV.cfg
@@ -20,7 +20,7 @@ PART
 // definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
 	node_stack_bottom = 0.0, -2.2, 0.0, 0.0, -1.0, 0.0, 1
 	node_stack_top = 0.0, 1.7, 0.0, 0.0, 1.0, 0.0, 1	
-	bulkheadProfiles = size1, size0
+	bulkheadProfiles = size1
 	CoMOffset = 0.0, -0.3, 0.0 
 	CoPOffset = 0.0, -0.3, 0.0 
 	CoLOffset = 0.0, -0.3, 0.0 
