--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/Knes_Hermes_AileronL.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/Knes_Hermes_AileronL.cfg
@@ -9,8 +9,8 @@ PART
 	}
 	scale = 1
 	rescaleFactor = 1
-	node_stack_SOAR = 0, -0.02, 0.01, 0.0, 1.0, 0.0, 1
-	node_attach = 0, -0.02, 0.01, 0.0, 1.0, 0.0, 1
+	node_stack_SOAR = 0, -0.02, 0.01, 0.0, 1.0, 0.0, 0
+	node_attach = 0, -0.02, 0.01, 0.0, 1.0, 0.0, 0
 	TechRequired = advUnmanned
 	entryCost = 4000
 	cost = 850
@@ -20,6 +20,7 @@ PART
 	manufacturer = Knes
 	description = Aileron for Hermes Space Shuttle
 	attachRules = 1,1,0,1,0
+	bulkheadProfiles = srf
 	mass = 0.1
 	dragModelType = none
 	thermalMassModifier = 6
