--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_P16_9375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_P16_9375.cfg
@@ -57,7 +57,7 @@ PART
 
 	MODULE
 	{
-		name = ModuleEngines
+		name = ModuleEnginesFX
 		thrustVectorTransformName = thrustTransform
 		throttleLocked = True
 		exhaustDamage = True
@@ -87,6 +87,93 @@ PART
         }
 
     }
+	
+	EFFECTS
+	{
+		running_solid
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_hard
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.2
+				pitch = 1.0 1.0
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = smoketrail
+				modelName = Knes/Resources/Plumes/diamantTrailWhite
+				transformName = fxTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.25
+				emission = 1.0 1.0
+				energy = 0.8 0.3
+				energy = 1 0.5
+				speed = 0.5 0.5
+				speed = 1.0 1.0
+				localPosition = 0, 0, 1
+				localScale = 1.5, 1.5, 1.5
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = blaze
+				modelName = Knes/Resources/Plumes/RushTameChunks
+				transformName = fxTransform
+				emission = 0.1 0.0
+				emission = 0.5 1.5
+				emission = 1.0 1.0
+				speed = 0.2 0.2
+				speed = 1.0 1.0
+				energy = 0.0 0.2
+				energy = 0.5 0.5
+				localScale = 1.3, 1.3, 1.3
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = chunk
+				modelName = Knes/Resources/Plumes/RushTameBlaze
+				transformName = fxTransform
+				emission = 0.0 0.0
+				emission = 0.8 1.0
+				speed = 0.0 0.2
+				speed = 0.5 0.5
+				energy = 0.0 0.0
+				energy = 0.5 1.0
+				localScale = 1.3, 1.3, 1.3
+			}
+		}
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_medium
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+		flameout
+		{
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_exhaustSparks_flameout_2
+				transformName = fxTransform
+				oneShot = true
+			}
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_explosion_low
+				volume = 1.5
+				pitch = 1.2
+				loop = false
+			}
+		}
+	}		
 	
 	RESOURCE
 	{
@@ -161,5 +248,7 @@ PART
             key = 1 1
         }
     }
+	
+	
 	
 }
