Cora Engine SL Fairing

--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Engine_SL.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Engine_SL.cfg
@@ -17,8 +17,9 @@ PART
     rescaleFactor = 1.0
 
     node_stack_top    = 0.0,  0.717188, 0.0, 0.0, 1.0, 0.0, 1
-    node_stack_bottom = 0.0, -0.717188, 0.0, 0.0, -1.0, 0.0, 1
-        
+    node_stack_bottom = 0.0, -1.60916, 0.0, 0.0, -1.0, 0.0, 1
+    node_stack_bottom2 = 0.0, -0.55988, 0.0, 0.0, -1.0, 0.0, 1
+	 
     bulkheadProfiles = size1
         
     attachRules = 1,0,1,1,0
@@ -172,7 +173,17 @@ PART
 		jettisonForce = 1
 		jettisonDirection = 0 0 1
 	}
-
+	MODULE
+	{
+		name = ModuleJettison
+		jettisonName = Fairing3
+		bottomNodeName = bottom2
+		isFairing = False
+		jettisonedObjectMass = 0.1
+		jettisonForce = 1
+		jettisonDirection = 0 0 1
+	}
+	
 	EFFECTS
 	{
 		running
