Cora Engine Update

--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Engine_SL.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Engine_SL.cfg
@@ -30,7 +30,7 @@ PART
 
     category     = Propulsion
     subcategory  = 0
-    title        = C-R12 "Coralie" Rocket Engine
+    title        = C-SL12 "Coralie" Rocket Engine
     manufacturer = Knes
     description  = Big things sometimes come in small packages, no this though - this is a medium thing.
 
