Fix Fairing Edges

--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_1875.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_1875.cfg
@@ -54,7 +54,7 @@ PART
 	{
 		name = ModuleProceduralFairing
 		
-		nSides = 40
+		nSides = 48
 		nArcs = 2
 		TextureURL = Knes/Parts/Core/Fairings/fairings_diff
 		CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap	
@@ -68,15 +68,20 @@ PART
 		capRadius = 0.5
 		snapThreshold = 0.1
 		
-		xSectionHeightMin = 0.2
-		xSectionHeightMax = 2
+		xSectionHeightMin = 0.3
+		xSectionHeightMax = 3
 		
 		edgeSlide = 0.15
-		edgeWarp = 0.01
+		edgeWarp = 0.02
 		noseTip = 0.5
 		
-		UnitAreaMass = 0.1
-		UnitAreaCost = 6
+		UnitAreaMass = 0.12
+		UnitAreaCost = 12
+		
+		stagingToggleEnabledEditor = True
+		stagingToggleEnabledFlight = False
+		stagingEnableText = #autoLOC_502000 //#autoLOC_502000 = Fairing Not Staged
+		stagingDisableText = #autoLOC_502001 //#autoLOC_502001 = Fairing Staged		
 	}
 	MODULE
 	{
