Cora engine Named "Penelope"

--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Engine_1.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Engine_1.cfg
@@ -29,7 +29,7 @@ PART
 
     category     = Propulsion
     subcategory  = 0
-    title        = C-R12 "Kitroen" Rocket Engine
+    title        = C-R12 "Penelope" Rocket Engine
     manufacturer = Knes
     description  = Big things sometimes come in small packages, no this though - this is a medium thing.
 
