--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Engine_SL.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Engine_SL.cfg
@@ -30,9 +30,9 @@ PART
 
     category     = Propulsion
     subcategory  = 0
-    title        = C-SL12 "Coralie" Rocket Engine
+    title        = C-SL12 "Penelope" Rocket Engine
     manufacturer = Knes
-    description  = Big things sometimes come in small packages, no this though - this is a medium thing.
+    description  = First stage variant of the C-R12 Engine with short nozzles.
 
     tags = 1.25 Knes
 
