--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Coralie_LFO_125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Coralie_LFO_125.cfg
@@ -30,7 +30,7 @@ PART
 
 	category = FuelTank
 	subcategory = 0
-	title = C-H225 Rocket Propellant Tank
+	title = C-H125 FuelTank
 	manufacturer = Knes
 	description = Where we're going, we don't need paint. This fuel tank lacks decoration, but it's certain to please utilitarians.
 
