New Payload Adapter for fairings

--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_09375.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_09375.cfg
@@ -6,7 +6,7 @@ PART
 {
 	name = Knes_Aero_Fairing_09375
 	module = Part
-	author = HarvesteR/Well
+	author = Well
 		
 	MODEL
 	{
@@ -18,6 +18,8 @@ PART
 	
 	node_stack_top = 0.0, 0.05, 0.0, 0.0, 1.0, 0.0, 0
 	node_stack_bottom = 0.0, -0.05, 0.0, 0.0, -1.0, 0.0, 0
+
+	node_stack_Payload = 0.0, 0.24455, 0.0, 0.0, 1.0, 0.0, 0	
 	
 	fx_gasBurst_white = 0.0, 0.3, 0.0, 0.0, 1.0, 0.0, deploy
 	sound_vent_large = deploy
@@ -94,5 +96,14 @@ PART
 		closedPosition = 0
 		lookupRadius = 0.75
 	}
-
+	MODULE
+	{
+		name = ModuleJettison
+		jettisonName = Adapter
+		bottomNodeName = Payload
+		isFairing = True
+		jettisonedObjectMass = 0.1
+		jettisonForce = 2
+		jettisonDirection = 0 0 1
+	}	
 }
