--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_125.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_125.cfg
@@ -6,7 +6,7 @@ PART
 {
 	name = Knes_Aero_Fairing_125
 	module = Part
-	author = HarvesteR/Well
+	author = Well
 		
 	MODEL
 	{
@@ -18,6 +18,8 @@ PART
 	
 	node_stack_top = 0.0, 0.05, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -0.05, 0.0, 0.0, -1.0, 0.0, 1
+	
+	node_stack_Payload = 0.0, 0.29622, 0.0, 0.0, 1.0, 0.0, 0		
 	
 	fx_gasBurst_white = 0.0, 0.3, 0.0, 0.0, 1.0, 0.0, deploy
 	sound_vent_large = deploy
@@ -96,4 +98,14 @@ PART
 		// nodeInnerAftID = top
 	}
 
+	MODULE
+	{
+		name = ModuleJettison
+		jettisonName = Adapter
+		bottomNodeName = Payload
+		isFairing = True
+		jettisonedObjectMass = 0.1
+		jettisonForce = 2
+		jettisonDirection = 0 0 1
+	}	
 }
