--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_1875.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_1875.cfg
@@ -6,7 +6,7 @@ PART
 {
 	name = Knes_Aero_Fairing_1875
 	module = Part
-	author = HarvesteR/Well
+	author = Well
 		
 	MODEL
 	{
@@ -18,6 +18,8 @@ PART
 	
 	node_stack_top = 0.0, 0.05, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -0.05, 0.0, 0.0, -1.0, 0.0, 2
+	
+	node_stack_Payload = 0.0, 0.43737, 0.0, 0.0, 1.0, 0.0, 1		
 	
 	fx_gasBurst_white = 0.0, 0.3, 0.0, 0.0, 1.0, 0.0, deploy
 	sound_vent_large = deploy
@@ -93,5 +95,14 @@ PART
 		// nodeOuterAftID = bottom
 		// nodeInnerAftID = top
 	}
-	
+	MODULE
+	{
+		name = ModuleJettison
+		jettisonName = Adapter
+		bottomNodeName = Payload
+		isFairing = True
+		jettisonedObjectMass = 0.1
+		jettisonForce = 2
+		jettisonDirection = 0 0 1
+	}		
 }
