--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_375.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_375.cfg
@@ -6,7 +6,7 @@ PART
 {
 	name = Knes_Aero_Fairing_375
 	module = Part
-	author = HarvesteR/Well
+	author = Well
 	
 	MODEL
 	{
@@ -16,10 +16,13 @@ PART
 	
 	rescaleFactor = 1	
 	
-	node_stack_top = 0.0, 0.1, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_bottom = 0.0, -0.1, 0.0, 0.0, -1.0, 0.0, 3
+	node_stack_top = 0.0, 0.1, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -0.1, 0.0, 0.0, -1.0, 0.0, 2
+	
+	node_stack_Payload = 0.0, 0.87473, 0.0, 0.0, 1.0, 0.0, 1	
 	
 	fx_gasBurst_white = 0.0, 0.3, 0.0, 0.0, 1.0, 0.0, deploy
+	
 	sound_vent_large = deploy
 	
 	TechRequired = composites
@@ -93,5 +96,15 @@ PART
 		// nodeOuterAftID = bottom
 		// nodeInnerAftID = top
 	}
-	
+		
+	MODULE
+	{
+		name = ModuleJettison
+		jettisonName = Adapter
+		bottomNodeName = Payload
+		isFairing = True
+		jettisonedObjectMass = 0.1
+		jettisonForce = 2
+		jettisonDirection = 0 0 1
+	}	
 }
