--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_09375.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_09375.cfg
@@ -105,5 +105,17 @@ PART
 		jettisonedObjectMass = 0.1
 		jettisonForce = 2
 		jettisonDirection = 0 0 1
+	}
+	MODULE
+	{
+		name = ModuleStructuralNode
+		rootObject = Payload
+		attachNodeNames = Payload
+	}		
+	MODULE 
+	{
+		name = ModuleStructuralNodeToggle
+		NodeMenuName = #autoLOC_502003 //#autoLOC_502003 = Interstage Nodes
+		showNodes = False
 	}	
 }
