--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_375.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_375.cfg
@@ -20,6 +20,7 @@ PART
 	node_stack_bottom = 0.0, -0.1, 0.0, 0.0, -1.0, 0.0, 2
 	
 	node_stack_Payload = 0.0, 0.87473, 0.0, 0.0, 1.0, 0.0, 1	
+	node_stack_DualPayload = 0.0, 3.96, 0.0, 0.0, 1.0, 0.0, 1	
 	
 	fx_gasBurst_white = 0.0, 0.3, 0.0, 0.0, 1.0, 0.0, deploy
 	
@@ -107,16 +108,5 @@ PART
 		jettisonForce = 2
 		jettisonDirection = 0 0 1
 	}
-	MODULE
-	{
-		name = ModuleStructuralNode
-		rootObject = Payload
-		attachNodeNames = Payload
-	}		
-	MODULE 
-	{
-		name = ModuleStructuralNodeToggle
-		NodeMenuName = #autoLOC_502003 //#autoLOC_502003 = Interstage Nodes
-		showNodes = False
-	}	
+
 }
